# blazing-cache-flow

backend/: .gitignore  Cargo.toml
backend/config/: base.yml
backend/migrations/: 20260331194147_init_migration.sql
backend/src/: main.rs
backend/src/api/: mod.rs  state.rs
backend/src/api/dto/: auth.rs
backend/src/api/errors/: auth.rs
backend/src/api/handlers/: auth.rs
backend/src/api/middlewares/: auth.rs
backend/src/config/: loader.rs  mod.rs
backend/src/domain/: mod.rs
backend/src/domain/entities/: account.rs  base.rs  category.rs  email_code.rs  mod.rs  operation.rs  sync_operation.rs  user.rs
backend/src/domain/infrastructure/: email.rs
backend/src/domain/repositories/: base.rs  email_code.rs  mod.rs  user.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/email/: sender.rs  templates.rs
backend/src/infrastructure/repositories/: mod.rs  pg_email_code.rs  pg_user.rs
backend/src/services/: auth.rs
