[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = "0.24.0"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
lettre = { version = "0.11.20", features = ["tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
rand = "0.10.0"
rust-crypto = "0.2.36"
rust_decimal = { version = "1.41.0", features = ["db-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["any", "derive", "macros", "migrate", "runtime-tokio", "postgres", "uuid", "rust_decimal", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.4.0", features = ["uuid", "axum_extras", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.0", features = ["serde", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
